Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -217,3 +217,21 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> sehingga kapanpun ada Pesan baru, maka Pesan tersebut akan langsung muncul ke Aplikasi tanpa harus Reload Page (memuat ulang halaman).
 >> 
 >> (Tabel "Messages" berisi data mengenai Pesan Chat, sehingga saat ada Pesan baru masuk, maka data pada Tabel "Messages" mengalami perubahan).
+>>
+>> -> How Hasura Manage Subscription :
+>> (Cara Hasura mengelola Subscription)
+>>
+>> Hasura menangani Subscription menggunakan "WebSockets".
+>>
+>> WebSockets merupakan teknologi yang memungkinkan komunikasi dua arah (two-way communication) antara Server dan Client.
+>> yang mana hal ini memungkinkan Hasura untuk menjaga Open Connection (komunikasi yang berkelanjutan untuk menerima informasi) dan melakukan Push Updates kapanpun terjadi >> perubahan pada Database.
+>>
+>>
+>> -> begini cara kerja Subscription : 
+>>
+>> (1) Saat aplikasi kita memulai Subscription, maka koneksi WebSocket dibuka antara Hasura dan aplikasi kita.
+>>
+>> (2) Selama Koneksi WebSocket ini aktif, Hasura dapat mengirim Update ke aplikasi kapanpun data mengalami perubahan
+>> 
+>> (3) Jika Koneksi WebSocket nya Lost (terputus) atau Closed (ditutup),
+>> maka aplikasi dapat melakukan Restart pada Subscription untuk bisa menerima Update (Perubahan Data).
