Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -244,24 +244,20 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >>
 >> Beberapa contoh Use Case Subscription, yaitu : 
 >>
->> (1) Live Chat :
->>
+>> (1) Live Chat : <br/>
 >> Dapatkan Pesan baru secara instan dalam percakapan, tanpa harus melakukan Refresh pada halaman.
 >> 
->> (2) Live Notifications :
->>
+>> (2) Live Notifications : <br/>
 >> Menampilkan Notifikasi segera setelah Event baru terjadi.
 >> Event tersebut seperti Comments, Likes, Messages.
 >>
->> (3) Collaborative Tools :
->>
+>> (3) Collaborative Tools : <br/>
 >> Jika beberapa orang sedang mengerjakkan sebuah dokumen yang sama,
->> maka Subscription dapat menunjukkan Real-Time Update dari User lain.
+>> maka Subscription dapat menunjukkan Real-Time Update dari User lain. <br/>
 >> Contohnya seperti Google Doc.
 >> Misalnya Putri dan Jane sedang mengerjakkan file yang sama pada Google Doc,
 >> maka dengan Subscription, Putri dapat melihat perubahan data pada dokumen yang dilakukan oleh Jane. begitu juga sebaliknya, Jika Putri menambah tulisan pada Goolge Doc, >> maka Jane dapat melihat tulisan oleh yang diubah oleh Putri.
 >> 
->> (4) Real-Time Dashboards :
->>
+>> (4) Real-Time Dashboards : <br/>
 >> Track (Melacak) Live Data pada sebuah Dashboard,
 >> seperti Stock Prices, Metrices, atau Data dari Sensor.
