Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -185,31 +185,27 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >>  }
 >>}
 >>```
->>
+>><br/>
 >>  -> Cara Kerja "Subscription" di Hasura :
 
->> (1) Client Subscribes :
-
+>> (1) Client Subscribes : <br/>
 >> Client yang berupa Front-end Application pada Hasura, mengirim "Query GraphQL Subscription".
->> Query tersebut dibutuhkan untuk track changes (melacak perubahan).
->>
+>> Query tersebut dibutuhkan untuk track changes (melacak perubahan). <br/>
 >>Misalnya jika kita ingin mendapatkan Real-Time Update mengenai Tabel "Message",
 >>maka kita akan Subscribe ke Tabel "Message" tersebut.
 >>
->>  (2) Hasura Listens For Change :
->>
->> Setelah Subscription aktif,
+>>  (2) Hasura Listens For Change : <br/>
+>> Setelah Subscription aktif, <br/>
 >> kemudian Hasura memantau Database untuk setiap perubahan (seperti New Messages, Updated Records, atau Deleted Data).
 >>
->> (3) Real-Time Updates :
->>
->> Saat terdapat perubahan pada Database,
+>> (3) Real-Time Updates : <br/>
+>> Saat terdapat perubahan pada Database, <br/>
 >> Hasura secara otomatis "Push the updated Data" (Push data yang di-update) ke Aplikasi secara Real-Time.
 >> yang mana dengan hal ini, Aplikasi tidak perlu mengirim Request baru atau melakukan Refresh Page untuk mendapatkan Data yang baru.
->
-> 
->>
->>
+>> <br/>
+>> <br/>
+>> <br/>
+>> <br/>
 >> -> Contoh Penggunaan Subscription :
 >>
 >> Jika kita membangun Chat App (Aplikasi Chat),
@@ -235,8 +231,9 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> 
 >> (3) Jika Koneksi WebSocket nya Lost (terputus) atau Closed (ditutup),
 >> maka aplikasi dapat melakukan Restart pada Subscription untuk bisa menerima Update (Perubahan Data).
->>
->>
+>><br/>
+>><br/>
+>> <br/>
 >>-> Use Case for Subscription :
 >> (Kasus penggunaan untuk Subscription)
 >> 
