Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -258,3 +258,9 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> (4) Real-Time Dashboards : <br/>
 >> Track (Melacak) Live Data pada sebuah Dashboard,
 >> seperti Stock Prices, Metrices, atau Data dari Sensor.
+>>
+>>   -> Workflow of Subscriber in Hasura :
+>> 	(Alur Kerja Subscriber di Hasura)
+>> 
+>> ![Cara Kerja of Subscriber in Hasura drawio](https://github.com/user-attachments/assets/930cf6bf-c8a9-4609-84fd-0aaf0746d003)
+
