Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -264,7 +264,7 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> 
 >> ![Cara Kerja of Subscriber in Hasura drawio](https://github.com/user-attachments/assets/930cf6bf-c8a9-4609-84fd-0aaf0746d003)
 >> <br/>
->> Berikut ini Cara Kerja / Alur Kerja Subscriber di Hasura : br/>
+>> Berikut ini Cara Kerja / Alur Kerja Subscriber di Hasura : <br/>
 >> (Penjelasan Chart)
 >> <br/>
 >> <br/>
