Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -268,5 +268,15 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> (Penjelasan Chart)
 >> <br/>
 >> <br/>
->>   
+>> (1) Client 1 & Client 2 : <br/>
+>> Bagian ini mewakili dua User (Client) yang berbeda dari aplikasi kita yang ingin menerima Real-Time Updates.  <br/>
+>> Masing-masing Clients mempunyai "WebSocket" Connection ke Hasura Server.
+>> 
+>> (2) WebSocket Connection :  <br/>
+>> Setiap Client memelihara koneksi WebSocket (WebSocket Connection) yang memungkinkan mereka untuk menerima Update secara Real-Time.  <br/>
+>> (Client perlu menjaga Koneksi pada WebSocket tetap aktif untuk bisa menerima Update secara Real-Time).
+>> 
+>> (3) Subscribe to "The Data Changes" :  <br/>
+>> Clients (baik Client 1, maupun Client 2 pada gambar) melakukan Subscribes untuk Perubahan Data tertentu (Data Changes tertentu),  <br/>
+>> yang mana hal ini dilakukan untuk mengirimkan "Subscription Query" (Query untuk minta Subscription) ke Server Hasura.
 
