Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -173,7 +173,7 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> misalnya kita mempunyai Table di Database yang bernama "Posts",
 >> dan kita ingin menampilkan Real-Time Updates saat terdapat perubahan pada Tabel "Posts".
 >>
->>Berikut ini adalah contoh Query untuk GraphQL Subscription ke Tabel Posts : 
+>> (1)  Berikut ini adalah contoh Query untuk GraphQL Subscription ke Tabel Posts : 
 >>
 >>```graphql
 >>subscription {
@@ -186,6 +186,26 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >>}
 >>```
 >><br/>
+>> (2) Contoh Query untuk Subscribes ke Tabel Messages : 
+>> jika terdapat perubahan Data pada Tabel Messages (Seperti mendapatkan Pesan/Message baru), kita akan mendapatkan Update pada Data tersebut secara Real-Time.
+>> 
+>> ```
+>> subscription {
+>>  messages(where: { chat_room_id: { _eq: 1 } }) {
+>>    id
+>>    content
+>>    user
+>>    created_at
+>>  }
+>> }
+>> ```
+>> <br/>
+>>  <br/>
+>> ````
+>> (where: { chat_room_id: { _eq: 1 } })
+>> ````
+>>  potongan Query diatas artinya "dimana nilai chat_room_id adalah 1",
+>> yang mana ini berarti jika terdapat Messages baru pada "Chat Room 1", maka berikan notifikasi nya pada Aplikasi saya.
 >>  -> Cara Kerja "Subscription" di Hasura :
 
 >> (1) Client Subscribes : <br/>
