Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -186,7 +186,7 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >>}
 >>```
 >><br/>
->> (2) Contoh Query untuk Subscribes ke Tabel Messages : 
+>> (2) Contoh Query untuk Subscribes ke Tabel Messages : <br/>
 >> jika terdapat perubahan Data pada Tabel Messages (Seperti mendapatkan Pesan/Message baru), kita akan mendapatkan Update pada Data tersebut secara Real-Time.
 >> 
 >> ```
@@ -200,13 +200,36 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> }
 >> ```
 >> <br/>
->>
+>> <br/>
 >> 
 >> ````
 >> (where: { chat_room_id: { _eq: 1 } })
 >> ````
 >> potongan Query diatas artinya "dimana nilai chat_room_id adalah 1",
 >> yang mana ini berarti jika terdapat Messages baru pada "Chat Room 1", maka berikan notifikasi nya pada Aplikasi saya.
+>> <br/>
+>> <br/>
+>> <br/>
+>> (3) Contoh Query untuk Subscribes ke Tabel "StockPrices" (harga saham) : <br/>
+>> Contoh Query untuk Subscribes ke Tabel StockPrices (harga Saham), tapi hanya ke Spesifik Saham, yaitu Saham AAPL.
+>>yakni jika terdapat perubahan harga Saham pada sahama AAPL, kita akan mendapatkan notifikasi mengenai Update Data tersebut secara Real-Time.
+>>
+>> ```
+>>subscription {
+>>  stockPrices(where: { symbol: { _eq: "AAPL" } }) {
+>>    symbol
+>>    price
+>>    updated_at
+>>  }
+>>}
+>>```
+>> <br/>
+>> <br/>
+>> ```
+>> (where: { symbol: { _eq: "AAPL" } })
+>> ```
+>>potongan Query diatas artinya "dimana nilai Symbol adalah AAPL", (AAPL itu merupakan kode untuk Saham Apple) <br/>
+>> yang mana ini berarti berikan saya notifikasi nya jika terdapat perubahan harga pada Saham AAPL.
 >> <br/>
 >> <br/>
 >> <br/>
