Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -327,5 +327,12 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> 
 >> (3) Subscribe to "The Data Changes" :  <br/>
 >> Clients (baik Client 1, maupun Client 2 pada gambar) melakukan Subscribes untuk Perubahan Data tertentu (Data Changes tertentu),  <br/>
->> yang mana hal ini dilakukan untuk mengirimkan "Subscription Query" (Query untuk minta Subscription) ke Server Hasura.
+>> yang mana hal ini dilakukan untuk mengirimkan "Subscription Query" (Query untuk minta Subscription) ke Server Hasura. <br/>
+>> yang dimaksud dengan "Client Subscribes to Spesific Data Changes", <br/>
+>> itu berarti Client memberitahu Server untuk segera memberikan Notifikasi saat terjadi perubahan mengenai Data Spesifik tersebut. <br/>
+>> Contoh :  <br/>
+>> Kita Subscribes ke Tabel "StockPrices" (harga saham), tapi hanya untuk spesifik Data, yaitu Saham Apple. <br/>
+>> maka kita hanya akan diberi notifikasi jika terdapat perubahan harga pada saham Apple, <br/>
+>> dan tidak diberi notifikasi jika terdapat perubahan harga pada saham lainnya. <br/>
+
 
