Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -334,5 +334,11 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> Kita Subscribes ke Tabel "StockPrices" (harga saham), tapi hanya untuk spesifik Data, yaitu Saham Apple. <br/>
 >> maka kita hanya akan diberi notifikasi jika terdapat perubahan harga pada saham Apple, <br/>
 >> dan tidak diberi notifikasi jika terdapat perubahan harga pada saham lainnya. <br/>
-
+>>
+>> <br/>
+>> <br/>
+>> (4) Hasura Server : 
+>> <br/>
+>> Hasura Server listens (mendengarkan) setiap Perubahan pada Data yang di-Subscribes.
+>> yang mana, Hasura Server akan diberi tahu jika terdapat perubahan data tersebut.
 
