Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -340,5 +340,10 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> (4) Hasura Server : 
 >> <br/>
 >> Hasura Server listens (mendengarkan) setiap Perubahan pada Data yang di-Subscribes.
->> yang mana, Hasura Server akan diberi tahu jika terdapat perubahan data tersebut.
+>> yang mana, Hasura Server akan diberi tahu jika terdapat perubahan pada data tersebut.
+>> <br/>
+>> <br/>
+>> (5) Data Changes : <br/>
+>> Hasura Server mendeteksi adanya perubahan pada Database, <br/>
+>> kemudian Hasura Server bersiap untuk mengirimkkan Update mengenai Perubahan Data.
 
