Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -334,7 +334,6 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> Kita Subscribes ke Tabel "StockPrices" (harga saham), tapi hanya untuk spesifik Data, yaitu Saham Apple. <br/>
 >> maka kita hanya akan diberi notifikasi jika terdapat perubahan harga pada saham Apple, <br/>
 >> dan tidak diberi notifikasi jika terdapat perubahan harga pada saham lainnya. <br/>
->>
 >> <br/>
 >> <br/>
 >> (4) Hasura Server : 
@@ -346,4 +345,13 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> (5) Data Changes : <br/>
 >> Hasura Server mendeteksi adanya perubahan pada Database, <br/>
 >> kemudian Hasura Server bersiap untuk mengirimkkan Update mengenai Perubahan Data.
+>>  <br/>
+>>  <br/>
+>> (6) Updates Sent :  <br/>
+>> Hasura Server mengirim Update ke semua Connected Clients yang melakukan Subscribes ke Data tersebut.
+>> <br/>
+>> (7) Notify Clients :  <br/>
+>> Client menerima Update Data melalui WebSocket Connection mereka masing-masing
+>> (Setiap Client mempunyai WebSocket Connection),  <br/>
+>> untuk memastikkan Data mereka tetap Sinkron dengan Server secara Real-Time
 
