Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -355,4 +355,9 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> Client menerima Update Data melalui WebSocket Connection mereka masing-masing
 >> (Setiap Client mempunyai WebSocket Connection),  <br/>
 >> untuk memastikkan Data mereka tetap Sinkron dengan Server secara Real-Time
-
+<br/>
+<br/>
+>> ^For your Information^ <br/>
+>> {2} **WebSocket**
+>> 
+>> 
