--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -355,9 +355,19 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> Client menerima Update Data melalui WebSocket Connection mereka masing-masing
 >> (Setiap Client mempunyai WebSocket Connection),  <br/>
 >> untuk memastikkan Data mereka tetap Sinkron dengan Server secara Real-Time
+>> <br/>
+>>  <br/>
+>> -> Summary Cara Kerja Subscriber di Hasura :  <br/>
+>> (1) Client menjaga agar "WebSocket Connection" tetap aktif agar bisa menerima Update Perubahan Data secara Real-Time  <br/>
+>> (2) Client mengirimkan "Subscription Query" untuk melakukan Subscribes ke Perubahan Data tertentu.  <br/>
+>> (3) Hasura Server "Listens" (mendengarkan) setiap perubahan pada Data yang di-subscribes.  <br/>
+>> (4) Hasura Server mendeteksi adanya perubahan pada Data.  <br/>
+>> (5) Hasura Server mengirim perubahan data ke semua Client yang terhubung (Connected Clients) yang melakukan Subscribes ke Data tersebut.  <br/>
+>> (6) Setiap Client menerima Update Perubahan Data melalui WebSocket Connection mereka masing-masing  <br/>
+
 <br/>
 <br/>
->> ^For your Information^ <br/>
->> {2} **WebSocket**
+>>  ^For your Information^ <br/>
+>>  {2} **WebSocket**
 >> 
 >> 
