Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -367,3 +367,11 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >>
 >>  -------
 >> {2} **WebSocket**
+>>
+>>  -> WebSocket merupakan "Communication Protocol" yang memungkinkan interaksi dua arah (two-way communication) yang berkelanjutan antara Client dan Server. <br/>
+>> tidak seperti metode komunikasi tradisional (Traditional Communication Method) seperti HTTP, dimana Client harus berulang kali membuat Request untuk mendapatkan Update >> dari Server.
+>>
+>> -> WebSocket menyediakan cara untuk menjaga Connection tetap Open dan Aktif, <br/>
+>> agar Data bisa mengalir bebas di kedua arah.
+>>
+>> 
