Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -374,4 +374,12 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> -> WebSocket menyediakan cara untuk menjaga Connection tetap Open dan Aktif, <br/>
 >> agar Data bisa mengalir bebas di kedua arah.
 >>
+>> -> Cara Kerja WebSocket :  <br/>
+>> (How WebSocket works)
+>>
+>> (1) Initial Connection (Koneksi awal) : <br/>
+>> Initial Connection dimulai dengan Client (seperti "Web Browser") yang membuat HTTP Request Standard ke Server. <br/>
+>> Request meminta untuk meningkatkan Connection ke WebSocket, <br/>
+>> yang mana jika Server mendukung WebSocket, maka Server setuju untuk meningkatkan Connection ke WebSocket, dan Connection didirikan.
+>>
 >> 
