--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -381,5 +381,15 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> Initial Connection dimulai dengan Client (seperti "Web Browser") yang membuat HTTP Request Standard ke Server. <br/>
 >> Request meminta untuk meningkatkan Connection ke WebSocket, <br/>
 >> yang mana jika Server mendukung WebSocket, maka Server setuju untuk meningkatkan Connection ke WebSocket, dan Connection didirikan.
->>
->> 
+>> <br/>
+>> <br/>
+>> (2) Full-Duplex Communication : <br/>
+>> "Full-Duplex" sendiri memiliki arti yaitu Data dapat dikirim & diterima dalam dua arah secara serentak,<br/>
+>> yang mana contohnya adalah Telephone Conversations (Percakapan Dua arah).<br/>
+>> <br/>
+>> (for your information, "Half-Duplex" sendiri berarti Data dapat dikirim dalam dua arah, tetapi tidak secara serentak, contohnya adalah Percakapan Walki-Talkie) <br/>
+>> <br/>
+>> Setelah "WebSocket Connection" didirikan, Client & Server dapat mengirim dan menerima Data kapan saja.<br/>
+>> Dan Client tidak perlu terus meminta Server untuk Update (seperti dalam "Traditional HTTP" yang perlu terus meminta Server untuk Update). <br/>
+>> <br/>
+>> WebSocket Connection tetap terbuka hingga Client atau Server memutuskan untuk menutupnya.
