Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -393,3 +393,10 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> Dan Client tidak perlu terus meminta Server untuk Update (seperti dalam "Traditional HTTP" yang perlu terus meminta Server untuk Update). <br/>
 >> <br/>
 >> WebSocket Connection tetap terbuka hingga Client atau Server memutuskan untuk menutupnya.
+>> <br/>
+>> <br/>
+>> (3) Real-Time Data Exchange : <br/>
+>> Karena WebSocket memiliki Connection yang selalu terbuka (Open), <br/>
+>> maka WebSocket ideal untuk Aplikasi Real-Time yang mengharuskan Data untuk dikirim atau diterima secara instant.<br/>
+>> <br/>
+>> Aplikasi Real-Time tersebut seperti Online Games, Chat Applications, Live Sports Updates, Stock Trading Platform, Collaborative Tools (seperti Google Doc).
