--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -400,3 +400,16 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> maka WebSocket ideal untuk Aplikasi Real-Time yang mengharuskan Data untuk dikirim atau diterima secara instant.<br/>
 >> <br/>
 >> Aplikasi Real-Time tersebut seperti Online Games, Chat Applications, Live Sports Updates, Stock Trading Platform, Collaborative Tools (seperti Google Doc).
+>> <br/>
+>> <br/>
+>> -> Key Features of WebSocket :<br/>
+>> (Fitur Utama WebSocket)<br/>
+>> <br/>
+>> (1) Persistence Connection :<br/>
+>> WebSocket memiliki Koneksi yang tetap terbuka.<br/>
+>> Koneksi WebSocket tetap terbuka hingga Client atau Server memutuskan untuk menutup Koneksi tersebut.<br/>
+>> <br/>
+>> (tidak seperti HTTP yang Koneksi ditutup setelah setiap kali Server mengirim Response.
+>> Sehingga pada HTTP, Koneksi baru harus selalu dibuat setiap kali Client melakukan Request ke Server )
+>>
+>> 
