Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -410,6 +410,12 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> Koneksi WebSocket tetap terbuka hingga Client atau Server memutuskan untuk menutup Koneksi tersebut.<br/>
 >> <br/>
 >> (tidak seperti HTTP yang Koneksi ditutup setelah setiap kali Server mengirim Response.
->> Sehingga pada HTTP, Koneksi baru harus selalu dibuat setiap kali Client melakukan Request ke Server )
+>> Sehingga pada HTTP, Koneksi baru harus selalu dibuat setiap kali Client melakukan Request ke Server )  <br/>
+>>  <br/>
+>> (2) Low Latency :  <br/>
+>> Latency dapat dikurangi karena tidak perlu membuka Koneksi baru berkali-kali untuk Data yang dikrimkan,  <br/>
+>> sehingga Data Transfer (pengiriman data menjadi lebih cepat).
 >>
 >> 
+
+
