Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -414,8 +414,13 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >>  <br/>
 >> (2) Low Latency :  <br/>
 >> Latency dapat dikurangi karena tidak perlu membuka Koneksi baru berkali-kali untuk Data yang dikrimkan,  <br/>
->> sehingga Data Transfer (pengiriman data menjadi lebih cepat).
->>
->> 
+>> sehingga Data Transfer (pengiriman data menjadi lebih cepat). <br/>
+>> <br/>
+>> (3) Two- Way Communication : <br/>
+>> Client & Server dapat mengirim message ke satu sama lain, kapanpun tanpa menunggu. <br/>
+>> <br/>
+>> (4) Efficient : <br/>
+>> Menggunakan lebih sedikit overhead data dibandingkan dengan HTTP Request, sehingga lebih cocok untuk transfer data real-time dan frekuensi tinggi.<br/>
+>> (Overhead Data adalah Extra Information yang dikirim bersama dengan Actual Content)
 
 
