Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -422,5 +422,17 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> (4) Efficient : <br/>
 >> Menggunakan lebih sedikit overhead data dibandingkan dengan HTTP Request, sehingga lebih cocok untuk transfer data real-time dan frekuensi tinggi.<br/>
 >> (Overhead Data adalah Extra Information yang dikirim bersama dengan Actual Content)
+>>
+>> -> Comparison with HTTP :  <br/>
+>> (Perbandingan/Perbedaan WebSocket dengan HTTP) : <br/>
+>>  <br/>
+>> HTTP :
+>> pada HTTP, Client harus berulang kali meminta Update (disebut Polling),  <br/>
+>> yang mana hal ini dapat menyebabkan Delay & tidak efektif pada Real-Time Data. <br/>
+>>  <br/>
+>> WebSocket : <br/>
+>> Server dapat langsung mengirim ke Client setelah segera Data baru tersedia, tanpa perlu Client me-request nya. <br/>
+>>
+>> 
 
 
