Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -426,7 +426,7 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> -> Comparison with HTTP :  <br/>
 >> (Perbandingan/Perbedaan WebSocket dengan HTTP) : <br/>
 >>  <br/>
->> HTTP :
+>> HTTP : <br/>
 >> pada HTTP, Client harus berulang kali meminta Update (disebut Polling),  <br/>
 >> yang mana hal ini dapat menyebabkan Delay & tidak efektif pada Real-Time Data. <br/>
 >>  <br/>
