Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -432,7 +432,12 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >>  <br/>
 >> WebSocket : <br/>
 >> Server dapat langsung mengirim ke Client setelah segera Data baru tersedia, tanpa perlu Client me-request nya. <br/>
+>>  <br/>
+>>  <br/>
+>>  -> Workflow of WebSocket in Hasura :  <br/>
+>> (Alur Kerja WebSocket di Hasura)
 >>
->> 
+>>  ![WebsSocket WorkFlow in Hasura drawio](https://github.com/user-attachments/assets/269d4d9f-3b27-4b47-9f44-8f5563a16ced)
+
 
 
