--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -438,6 +438,57 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> (Alur Kerja WebSocket di Hasura)
 >>
 >>  ![WebsSocket WorkFlow in Hasura drawio](https://github.com/user-attachments/assets/269d4d9f-3b27-4b47-9f44-8f5563a16ced)
-
+>> <br/>
+>>  Workflow WebSocket itu mirip dengan Workflow Subscription :
+>> <br/>
+>><br/>
+>> (1) Client 1 & Client 2 : <br/>
+>> Bagian ini mewakili dua User (Client) yang berbeda dari aplikasi kita yang ingin menerima Real-Time Updates.  <br/>
+>> Masing-masing Clients mempunyai "WebSocket" Connection ke Hasura Server.
+>> 
+>> (2) WebSocket Connection :  <br/>
+>> Setiap Client memelihara koneksi WebSocket (WebSocket Connection) yang memungkinkan mereka untuk menerima Update secara Real-Time.  <br/>
+>> (Client perlu menjaga Koneksi pada WebSocket tetap aktif untuk bisa menerima Update secara Real-Time).
+>> 
+>> (3) Subscribe to "The Data Changes" :  <br/>
+>> Clients (baik Client 1, maupun Client 2 pada gambar) melakukan Subscribes untuk Perubahan Data tertentu (Data Changes tertentu),  <br/>
+>> yang mana hal ini dilakukan dengan mengirimkan "Subscription Query" (Query untuk minta Subscription) ke Server Hasura. <br/>  <br/>
+>> yang dimaksud dengan "Client Subscribes to Spesific Data Changes", <br/>
+>> itu berarti Client memberitahu Server untuk segera memberikan Notifikasi saat terjadi perubahan mengenai Data Spesifik tersebut. <br/>
+>> Contoh :  <br/>
+>> Kita Subscribes ke Tabel "StockPrices" (harga saham), tapi hanya untuk spesifik Data, yaitu Saham Apple. <br/>
+>> maka kita hanya akan diberi notifikasi jika terdapat perubahan harga pada saham Apple, <br/>
+>> dan tidak diberi notifikasi jika terdapat perubahan harga pada saham lainnya. <br/>
+>> <br/>
+>> <br/>
+>> (4) Hasura Server : 
+>> <br/>
+>> Hasura Server listens (mendengarkan) setiap Perubahan pada Data yang di-Subscribes.
+>> yang mana, Hasura Server akan diberi tahu jika terdapat perubahan pada data tersebut.
+>> <br/>
+>> <br/>
+>> (5) Data Changes : <br/>
+>> Hasura Server mendeteksi adanya perubahan pada Database, <br/>
+>> kemudian Hasura Server bersiap untuk mengirimkkan Update mengenai Perubahan Data.
+>>  <br/>
+>>  <br/>
+>> (6) Updates Sent :  <br/>
+>> Hasura Server mengirim Update ke semua Connected Clients yang melakukan Subscribes ke Data tersebut.
+>> <br/>
+>> <br/>
+>> (7) Notify Clients :  <br/>
+>> Client menerima Update Data melalui WebSocket Connection mereka masing-masing
+>> (Setiap Client mempunyai WebSocket Connection),  <br/>
+>> untuk memastikkan Data mereka tetap Sinkron dengan Server secara Real-Time
+>> <br/>
+>>  <br/>
+>> -> Summary Cara Kerja WebSocket di Hasura :  <br/>
+>> (1) Client menjaga agar "WebSocket Connection" tetap aktif agar bisa menerima Update Perubahan Data secara Real-Time  <br/>
+>> (2) Client mengirimkan "Subscription Query" untuk melakukan Subscribes ke Perubahan Data tertentu.  <br/>
+>> (3) Hasura Server "Listens" (mendengarkan) setiap perubahan pada Data yang di-subscribes.  <br/>
+>> (4) Hasura Server mendeteksi adanya perubahan pada Data.  <br/>
+>> (5) Hasura Server mengirim perubahan data ke semua Client yang terhubung (Connected Clients) yang melakukan Subscribes ke Data tersebut.  <br/>
+>> (6) Setiap Client menerima Update Perubahan Data melalui WebSocket Connection mereka masing-masing  <br/>
+>>
 
 
