--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -489,6 +489,25 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> (4) Hasura Server mendeteksi adanya perubahan pada Data.  <br/>
 >> (5) Hasura Server mengirim perubahan data ke semua Client yang terhubung (Connected Clients) yang melakukan Subscribes ke Data tersebut.  <br/>
 >> (6) Setiap Client menerima Update Perubahan Data melalui WebSocket Connection mereka masing-masing  <br/>
->>
+>> <br/>
+>> <br/>
+>>  -> WebSocket Server :
+
+WebSocket Server merupakan System yang menangani WebSocket Connection yang masuk dari Client.
+WebSocket Server mendengarkan (Listens) WebSocket Request yang baru, menerima Connections, kemudian mengelola Real-Time Communications antara Server dan Client.
+
+-> Fungsi WebSocket Server :
+(1) Accepts Connection :
+Saat Client mengirim WebSocket Connection Request, 
+WebSocket Server menerima atau menolak WebSocket Connection Request.
+
+(2) Manages Communication :
+Setelah Connection berhasil didirikan, WebSocket Server mengelola komunikasi antara dirinya dengan Client yang terhubung.
+WebSocket Server dapat mengirim Pesan ke Client, menerima Pesan dari Client, dan menyiarkan (broadcast) updates ke Multiple Clients secara bersamaan.
+
+(3) Handles Multiple Clients :
+Sebuah WebSocket Server dapat menangani Beberapa WebSocket Connection dalam waktu yang sama.
+yang mana ini berarti, banyak Clients dapat terkoneksi ke WebSocket Server secara bersamaan (simultaneously) untuk menerima Real-Time Updates.
+(Lebih dari satu Client dapat terhubung ke satu WebSocket Server secara bersamaan )
 
 
