Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -508,5 +508,8 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >>  Sebuah WebSocket Server dapat menangani Beberapa WebSocket Connection dalam waktu yang sama.  <br/>
 >>  yang mana ini berarti, banyak Clients dapat terkoneksi ke WebSocket Server secara bersamaan (simultaneously) untuk menerima Real-Time Updates.  <br/>
 >>  (Lebih dari satu Client dapat terhubung ke satu WebSocket Server secara bersamaan )  <br/>
-
+>>
+>> -------
+>> {3} **Traditional HTTP Response**
+>> 
 
