Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -510,6 +510,10 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >>  (Lebih dari satu Client dapat terhubung ke satu WebSocket Server secara bersamaan )  <br/>
 >>
 >> -------
->> {3} **Traditional HTTP Response**
+>> {3} **Traditional HTTP Response** <br/>
+>> <br/>
+>> -> "Traditional HTTP Request" merupakan cara bagi Client (seperti Web Browser) untuk berkomunikasi dengan Server untuk meminta Data atau mengirim Informasi. <br/>
+>> "Traditional HTTP Request" mengikuti "Request-Response Model" dimana Client mengirimkan sebuah Request dan Server mengirim kembali sebuah Reponse.
+>>
 >> 
 
