--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -513,7 +513,19 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> {3} **Traditional HTTP Response** <br/>
 >> <br/>
 >> -> "Traditional HTTP Request" merupakan cara bagi Client (seperti Web Browser) untuk berkomunikasi dengan Server untuk meminta Data atau mengirim Informasi. <br/>
->> "Traditional HTTP Request" mengikuti "Request-Response Model" dimana Client mengirimkan sebuah Request dan Server mengirim kembali sebuah Reponse.
+>> "Traditional HTTP Request" mengikuti "Request-Response Model" dimana Client mengirimkan sebuah Request dan Server mengirim kembali sebuah Reponse.  <br/>
+>>  <br/>
+>> -> There are two-key players "Traditional HTTP Request" :  <br/>
+>>  (Dua pemain kunci pada "Traditional HTTP Request")
+>>   <br/>
+>>   <br/>
+>> (1) Client : <br/>
+>>  Biasanya Client berupa Web Browser atau App (Front-End Applications yang biasa dipakai oleh User), <br/>
+>>  yang Client tersebut ingin mengambil Data (Fetch Data) atau mengirim informasi ke Server.  <br/>
+>>   <br/>
+>>  (2) Server : <br/>
+>>  Server menyimpan Resources (seperti Web Pages, Images, atau Data)  <br/>
+>>  dan juga Server memproses Client's Request.
 >>
 >> 
 
