Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -526,6 +526,24 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >>  (2) Server : <br/>
 >>  Server menyimpan Resources (seperti Web Pages, Images, atau Data)  <br/>
 >>  dan juga Server memproses Client's Request.
->>
->> 
+>> <br/>
+>>  <br/>
+>> -> Cara Kerja "Traditional HTTP Request" :  <br/>
+>>  <br/>
+>> (1) Client Sends a Request :  <br/>
+>> Clent mengirim "HTTP Request" ke Server.  <br/>
+>> Request dapat berupa hal yang berbeda, seperti :  <br/>
+>>  <br/>
+>> GET :  <br/>
+>> untuk meminta Data (seperti Loading halaman Web. image, ataU API Data).  <br/>
+>>  <br/>
+>> POST : <br/>
+>> untuk mengirim Data ke Server (seperti Mengumpulkan Form).  <br/>
+>>  <br/>
+>> PUT :  <br/>
+>> untuk meng-update Data.  <br/>
+>>  <br/>
+>> DELETE :  <br/>
+>> untuk menghapus Data
+>>  <br/>
 
