--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -546,4 +546,25 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> DELETE :  <br/>
 >> untuk menghapus Data
 >>  <br/>
+>>  <br/>
+>> (2) Server Receives The Request :  <br/>
+>> Server memproses Request dan menentukkan Data atau Resource yang mana yang akan dikembalikan ke Client.  <br/>
+>>  <br/>
+>> (3) Server Sends a Response :  <br/>
+>> Setelah memproses Request, Server mengirim kembali sebuah Response.  <br/>
+>> yang mana Response tersebut mengandung :  <br/>
+>> (Response yang dikirim bali oleh Server ke Client, mengandung hal berikut ini : )  <br/>
+>>  <br/>
+>> - Status Code :  <br/>
+>> Status Code mengindikasikan apakah Request nya berhasil, atau apakah Request Error.  <br/>
+>> Contoh Status Code jika Request berhasil = 200 OK , dan sebagainya.  <br/>
+>> Contoh Status Code jika Request error = 404 Not Found , dan sebagainya.  <br/>
+>>  <br/>
+>> - Data :   <br/>
+>> Jika Request tersebut untuk meminta Data (seperti WebPage atau API),  <br/>
+>> maka Server mengirim kembali Informasi yang di-request.  <br/>
+>>  <br/>
+>> (4) Connection Closes :  <br/>
+>> Koneksi ditutup setelah Server memberikkan Responds.  <br/>
+>> Sehingga Client harus membuat Request baru jika memerlukkan lebih banyak data. <br/>
 
