--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -555,12 +555,12 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> yang mana Response tersebut mengandung :  <br/>
 >> (Response yang dikirim bali oleh Server ke Client, mengandung hal berikut ini : )  <br/>
 >>  <br/>
->> - Status Code :  <br/>
+>> **Status Code** :  <br/>
 >> Status Code mengindikasikan apakah Request nya berhasil, atau apakah Request Error.  <br/>
 >> Contoh Status Code jika Request berhasil = 200 OK , dan sebagainya.  <br/>
 >> Contoh Status Code jika Request error = 404 Not Found , dan sebagainya.  <br/>
 >>  <br/>
->>  - Data :   <br/>
+>> **Data** :   <br/>
 >> Jika Request tersebut untuk meminta Data (seperti WebPage atau API),  <br/>
 >> maka Server mengirim kembali Informasi yang di-request.  <br/>
 >>  <br/>
