--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -567,4 +567,23 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> (4) Connection Closes :  <br/>
 >> Koneksi ditutup setelah Server memberikkan Responds.  <br/>
 >> Sehingga Client harus membuat Request baru jika memerlukkan lebih banyak data. <br/>
+>> <br/>
+>>  <br/>
+>> -> One-Time Request and Response : <br/>
+>>   <br/>
+>>  Pada "Traditional HTTP Request", Communication nya adalah "One-Time" (satu kali),  <br/>
+>>  yang berarti :  <br/>
+>>  
+>>  - Client meminta Data, Server memberikan Reponse, kemudian Communication selesai.  <br/>
+>>   <br/>
+>>  - Jika Client membutuhkan Lebih banyak Data atau Informasi ter-Update,  <br/>
+>>  maka Client harus mengirim Request Baru.  <br/>
+>>   <br/>
+>>  Sebagai contoh :  <br/>
+>>  Jika kita ingin membaca Article pada 'Halaman Web', maka Browser (Client) kita mengirim sebuah Request ke Server untuk meminta Halaman Web tersebut,  <br/>
+>>  Dan Server memberi Response dengan mengirim Data mengenai Article pada Halaman web tersebut, Kemudian Connection tertutup.  <br/>
+>>  Sehingga jika terdapat "Page Update", kita harus melakukan "Refresh" pada Halaman Web untuk mengirim Request Baru,  <br/>
+>>  setelah itu, baru kita mendapatkan Halaman Web dengan informasi yang sudah diperbarui.  <br/>
+
+ 
 
