Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -584,6 +584,18 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >>  Dan Server memberi Response dengan mengirim Data mengenai Article pada Halaman web tersebut, Kemudian Connection tertutup.  <br/>
 >>  Sehingga jika terdapat "Page Update", kita harus melakukan "Refresh" pada Halaman Web untuk mengirim Request Baru,  <br/>
 >>  setelah itu, baru kita mendapatkan Halaman Web dengan informasi yang sudah diperbarui.  <br/>
+>>  <br/>
+>>  <br/>
+>> -> Stateless Communication :  <br/>
+>>  <br/>
+>> HTTP Request bersifat "Stateless",  <br/>
+>> yang berarti setiap Request bersifat "Independent" yang artinya Server tidak ingat 'Request Sebelumnya'.  <br/>
+>> sebagai contoh :  <br/>
+>> Jika kita memuat satu halaman Web, kemudian kita Clik link pada halaman Web tersebut untuk memuat halaman Web yang berbeda,  <br/>
+>> Kedua Request untuk memuat Halaman Web tersebut ditangani secara terpisah.  <br/>
+>> yang mana Server tidak melacak Riwayat penelusuran kita, kecuali menggunakan Mekanisme khusus seperti "Cookies".  <br/>
+>>
+>> 
 
  
 
