Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -594,8 +594,16 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> Jika kita memuat satu halaman Web, kemudian kita Clik link pada halaman Web tersebut untuk memuat halaman Web yang berbeda,  <br/>
 >> Kedua Request untuk memuat Halaman Web tersebut ditangani secara terpisah.  <br/>
 >> yang mana Server tidak melacak Riwayat penelusuran kita, kecuali menggunakan Mekanisme khusus seperti "Cookies".  <br/>
->>
->> 
+>>   <br/>
+>> -> Advantages of Traditional HTTP Requests :   <br/>
+>> (Kelebihan "Traditional HTTP Requests")   <br/>
+>>   <br/>
+>> (1) Simple & Efficient :   <br/>
+>> Bekerja sangat baik untuk Simple Actions (Actions sederhana) seperti Memuat Halaman Web atau Submitting a Form.  <br/>
+>>   <br/>
+>> (2) Wide Compatibility :   <br/>
+>> merupakan Backbone (tulang punggung) bagaimana Web bekerja,   <br/>
+>> dan semua Web Browser & Server memahami HTTP.   <br/>
 
  
 
