--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -603,7 +603,16 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >>   <br/>
 >> (2) Wide Compatibility :   <br/>
 >> merupakan Backbone (tulang punggung) bagaimana Web bekerja,   <br/>
->> dan semua Web Browser & Server memahami HTTP.   <br/>
+>> dan semua Web Browser & Server memahami HTTP.   <br/>  <br/>
+>>
+>> -> Limitations of Traditional HTTP Request :  <br/>
+>> (Keterbatasan "Traditional HTTP Request")  <br/>
+>> 
+>> (1) No Real-Time Updates :  <br/>
+>> Setelah Server memberikan Respnse, maka Connection ditutup. <br/>
+>> Jika terdapat Perubahan Data, maka Client harus mengirim "Request Baru" untuk medapatkan Data terbaru. <br/>
+>> yang mana hal ini dapat menjadi inefficient untuk Aplikasi Real-Time. 
+
 
  
 
