Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -611,8 +611,30 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> (1) No Real-Time Updates :  <br/>
 >> Setelah Server memberikan Respnse, maka Connection ditutup. <br/>
 >> Jika terdapat Perubahan Data, maka Client harus mengirim "Request Baru" untuk medapatkan Data terbaru. <br/>
->> yang mana hal ini dapat menjadi inefficient untuk Aplikasi Real-Time. 
-
+>> yang mana hal ini dapat menjadi inefficient untuk Aplikasi Real-Time. <br/> <br/>
+>>
+>> (2) Polling Needed for Updates : <br/>
+>> (dibutuhkan "Polling" untuk Updates) <br/>
+>> <br/>
+>> Pada HTTP, jika membutuhkan Real-Time Data, biasanya digunakan "Polling" untuk mengecek Perubahan Data. <br/>
+>> tetapi "Polling" dapat menambah beban pada Server dan tidak efficient.<br/>
+>> <br/>
+>> Polling pada HTTP merupakan sebuah Method yang digunakan oleh Client (seperti Web Browser) untuk memeriksa Pembaruan Data di Server secara berkala. <br/>
+>> Client mengirim request ke Server secara berkala untuk melihat apakah ada Data baru, jika ada, maka Server melakukan Respond dengan memberi Updated Information. <br/>
+>> 
+>> Polling dapat menambah Beban Server (Server Load) dan Menyebabkan Inefficiency (ketidak efisienan) karena Server tidak selalu mempunyai Data terbaru saat Polling >> >> >> dilakukan, sehingga Polling dapat membuang Resources (seperti Bandwith) secara  Mubazir. <br/>
+>> <br/>
+>> Polling juga bisa menyebabkan Latency, yakni dalam hal keterlambatan pengiriman Update Data, karena Client hanya mengecek Data terbaru pada Spesifik Interval (jangka >> >> waktu tertentu). Sehingga jika kita menetapkan Pengecekkan dilakukan setiap Interval waktu yang panjang, maka Data terbaru tersebut dapat terlambat sampai ke User. <br/>
+>> <br/>
+>> Untuk mengatasi hal tersebut, terdapat beberapa Alternative, diantaranya adalah : <br/> 
+>> 
+>> - Long Polling : <br/>
+>> Client membuat sebuah Request dan Server menahan untuk belum memberikan Response terhadap Request tersebut sampai terdapat Data baru. <br/>
+>> hal ini bertujuan untuk mengurangi jumlah Request yang tidak perlu. <br/> <br/>
+>> 
+>> - WebSockets : <br/>
+>> Cara yang lebih efisien untuk menjaga Koneksi tetap terjalin antara Client & Server, <br/>
+>> sehingga memungkinkan agar Data Terbaru dapat langsung dikirimkan secara instan, tanpa perlu membuat Request yang berulang. <br/>
 
  
 
