Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -634,7 +634,16 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >> 
 >> - WebSockets : <br/>
 >> Cara yang lebih efisien untuk menjaga Koneksi tetap terjalin antara Client & Server, <br/>
->> sehingga memungkinkan agar Data Terbaru dapat langsung dikirimkan secara instan, tanpa perlu membuat Request yang berulang. <br/>
-
+>> sehingga memungkinkan agar Data Terbaru dapat langsung dikirimkan secara instan, tanpa perlu membuat Request yang berulang. <br/> <br/>
+>>
+>> -> Contoh "Traditional HTTP Request" : <br/> <br/>
+>> 
+>> Misalnya kita membuka Halaman Web : <br/>
+>> 
+>> (1) Kita (Client) mengetikkan URL ke Browser (seperti www.xyz.com). <br/>
+>> (2) Browser mengirimkan "HTTP GET Request" ke Server yang meng-hosting Website tersebut. <br/>
+>> (3) Server memproses Request dan memberikan Response dengan mengirim WebPage Content yang diminta oleh Client. <br/>
+>> (4) Browser menampilkan Halaman Web, dan Connection ditutup. <br/>
+>> karena Connection ditutup, sehingga jika terdapat Perubahan (Update) pada Content Halaman Website, kita perlu Refresh Halaman Web untuk mendapatkan Update pada Content >> halaman Web tersebut. <br/>
  
 
