Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -650,5 +650,10 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 
 ## B. Subgraphs
 
- 
+ -> Subgraph merupakan semua Metadata yang dibutuhkan untuk bertindak sebagai Self-Contained Entity (Entitas Mandiri) yang dapat dibuat, dimiliki, dipelihara, dan dibangun secara independen oleh Team Individu, untuk kemudian menjadi bagian yang saling terhubung dari Unified API
+
+-> untuk API Authors (penulis API), ini berarti kemampuan untuk membangun API yang terdiri dari berbagai Sumber dengan cara yang sederhana dan deklaratif.
+kita dapat memanfaatkann aturan kontrol akses (access-control) yang unik, Mekanisme Autentikasi, dan Custom Business Logic dalam Subgraph kita untuk membuat API yang aman & tangguh.
+
+
 
