Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -655,5 +655,8 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 -> untuk API Authors (penulis API), ini berarti kemampuan untuk membangun API yang terdiri dari berbagai Sumber dengan cara yang sederhana dan deklaratif.
 kita dapat memanfaatkann aturan kontrol akses (access-control) yang unik, Mekanisme Autentikasi, dan Custom Business Logic dalam Subgraph kita untuk membuat API yang aman & tangguh.
 
-
+-> Setiap Subgraph (pada contoh kami) adalah Modular Component dari "Data Supergraph", <br/>
+komponen-komponen ini bekerja sama dengan aman untuk mengatasi hambatan tradisional yang ditimbulkan oleh Isolated Data Source (Sumber data yang terisolasi), memfasilitasi lapisan data yang lebih lancar dan saling terhubung (interconnected). <br/>
+Pendekatan Integrasi ini menyederhanakan pengembangan Aplikasi antar System Data, 
+memungkinkan Iterasi yang lebih cepat dan Maintenance yang lebih cepat oleh Team Engineer.
 
