--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -660,3 +660,5 @@ komponen-komponen ini bekerja sama dengan aman untuk mengatasi hambatan tradisio
 Pendekatan Integrasi ini menyederhanakan pengembangan Aplikasi antar System Data, 
 memungkinkan Iterasi yang lebih cepat dan Maintenance yang lebih cepat oleh Team Engineer.
 
+### 1. How Do I Build a Subgraph ?
+### (Bagaimana cara membuat Subgraph)
