Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -662,3 +662,14 @@ memungkinkan Iterasi yang lebih cepat dan Maintenance yang lebih cepat oleh Team
 
 ### 1. How Do I Build a Subgraph ?
 ### (Bagaimana cara membuat Subgraph)
+
+-> Subgraph tersusun dari Data Source terkait, baik sebagai Traditional Database, atau sebagai Custome Business Logic.
+Dan Subgraph terkoneksi (connected) ke Data Layer menggunakan Data Connector.
+
+Hasura DDN (Data Delivery Network) menggunakan sejumlah Data Connector yang bekerja dengan Database, Services, dan API Out-of-the-box atau membuat sendiri.
+("API Out-of-the-box" merupakan API yang sudah dibuat sebelumnya yang siap digunakan segera tanpa memerlukan Pengaturan (Setup) atau Penyesuaian (Customization) yang ekstensif).
+
+Subgraph ini bahkan dapat menyertakan Custom Business Logic Anda sendiri sebagai fungsi TypeScript yang mengembalikan atau mengubah data secara langsung melalui GraphQL API Anda. Ini menghemat waktu dan tenaga Anda dalam membangun dan memelihara API Anda sendiri untuk mengelola Data Source dan Microservices yang ada.
+
+
+-> Setelah menghubungkan Data Source , Anda kemudian dapat membuat metadata Anda menggunakan Hasura CLI dan ekstensi Hasura VS Code. Metadata ini kemudian dibangun pada Hasura DDN Instance Anda, yang digunakan untuk serve GraphQL API Anda.
