Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -673,3 +673,10 @@ Subgraph ini bahkan dapat menyertakan Custom Business Logic Anda sendiri sebagai
 
 
 -> Setelah menghubungkan Data Source , Anda kemudian dapat membuat metadata Anda menggunakan Hasura CLI dan ekstensi Hasura VS Code. Metadata ini kemudian dibangun pada Hasura DDN Instance Anda, yang digunakan untuk serve GraphQL API Anda.
+
+### 2. Understanding Subgraph in GraphQL
+### (GraphQL in General, not only Hasura)
+(Hasura merupakan produk GraphQL, tetapi Produk GraphQL tidak hanya Hasura)
+(Penjelasan Konsep Subgraph tidak banyak dijelskan di Dokumentasi Hasura, sehingga kita perlu memahami konsep Subgraph pada GraphQL secara general)
+
+>> penjelasan ini diluar Dokumentasi Hasura
